Padarytas vaiksciojimas tarp buttonNavigation menu, reikia dar sukurt settings sistema, kad eitu padaryt perjima i ji, nes dabar neis dadeti paprasto perjimo per page

--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -3,5 +3,6 @@
 
     <item android:title="Settings"
         android:icon="@drawable/baseline_settings_24"
+        android:background="@color/purple_200"
         android:id="@+id/settings"/>
 </menu>
