--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_200"
     tools:context=".MapFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,6 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="32dp"
-        android:text="Map" />
+        android:text="Map Fragment" />
 
 </FrameLayout>
