--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="650dp">
+        android:layout_height="650dp"
+        android:background="@color/cardview_shadow_start_color">
 
         <Button
             android:id="@+id/logout"
@@ -21,24 +22,24 @@
             android:text="@string/logout"
             tools:visibility="visible" />
 
-        <TextView
-            android:id="@+id/user_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            tools:visibility="gone" />
-
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationView"
-            android:layout_width="153dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:translationZ="90dp"
-            android:background="@color/teal_200"
             app:menu="@menu/top_nav_menu"
             tools:visibility="visible">
 
         </com.google.android.material.navigation.NavigationView>
+
+        <Button
+            android:id="@+id/profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:text="Profile"
+            tools:visibility="visible"/>
 
     </FrameLayout>
 
