--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Settings"
+    <item
+        android:id="@+id/settings"
         android:icon="@drawable/baseline_settings_24"
-        android:background="@color/purple_200"
-        android:id="@+id/settings"/>
+        android:title="Settings" />
 </menu>
