--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,8 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
-            android:hint="@string/email"
-            android:inputType="text"/>
+            android:hint="@string/email" />
 
 
         <com.google.android.material.textfield.TextInputEditText
