--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_700"
+    android:background="@color/teal_200"
     tools:context=".ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,5 +13,22 @@
         android:layout_gravity="center"
         android:textSize="32dp"
         android:text="Settings Fragment" />
+    <Button
+        android:id="@+id/Log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="Logout"
+        android:onClick="logout"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/Pr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="Profile"
+        android:onClick="SwitchFragment"
+        tools:visibility="visible" />
 
 </FrameLayout>
