--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,13 @@
             android:background="@drawable/baseline_settings_24" />
 
         <Button
-            android:id="@+id/Logout"
-            android:layout_width="wrap_content"
+            android:id="@+id/Camera"
+            android:layout_width="53dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="@string/logout"
-            android:visibility="gone"
-            tools:visibility="gone" />
+            android:layout_marginLeft="0dp"
+            android:foreground="@drawable/baseline_photo_camera_24"
+            android:background="@drawable/baseline_photo_camera_24" />
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationView"
@@ -43,15 +43,6 @@
             tools:visibility="gone">
 
         </com.google.android.material.navigation.NavigationView>
-
-        <Button
-            android:id="@+id/Profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:text="Profile"
-            android:visibility="gone"
-            tools:visibility="gone" />
 
     </FrameLayout>
 
