--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,7 +33,7 @@
 
     <LinearLayout
         android:layout_width="350dp"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="8dp"
         android:layout_centerInParent="true"
         android:orientation="vertical">
@@ -71,6 +71,23 @@
             android:layout_weight="0.25"
             android:textSize="25dp"
             android:text="" />
+
+        <TextView
+            android:id="@+id/titleViewTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:text="Title:" />
+
+        <TextView
+            android:id="@+id/titleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:textSize="25dp"
+            android:text="" />
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -88,5 +105,49 @@
         android:layout_alignParentRight="true"
         tools:ignore="RtlHardcoded" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="70dp">
+
+        <TextView
+            android:id="@+id/Padding1"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_weight="0.1"
+            android:textSize="25dp"
+            android:text="" />
+
+        <Button
+            android:id="@+id/EditProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit Profile"
+            android:layout_weight="0.25" />
+
+        <TextView
+            android:id="@+id/Padding2"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_weight="0.1"
+            android:textSize="25dp"
+            android:text="" />
+
+        <Button
+            android:id="@+id/PointsShopNav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Points Shop"
+            android:layout_weight="0.25"/>
+
+        <TextView
+            android:id="@+id/Padding3"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_weight="0.1"
+            android:textSize="25dp"
+            android:text="" />
+    </LinearLayout>
 
 </RelativeLayout>
