--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:gravity="center"
     android:layout_height="match_parent"
     android:padding="15dp"
+    android:onClick="closeKeyboard"
     tools:context=".Login">
     
     <TextView
