--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -32,6 +32,22 @@
         android:layout_marginLeft="225dp"
         android:text="Gallery" />
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/postName"
+        android:layout_width="195dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="460dp"
+        android:layout_marginLeft="100dp"
+        android:hint="Pavadinimas" />
+
+    <Button
+        android:id="@+id/submitBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="520dp"
+        android:layout_marginLeft="160dp"
+        android:text="Submit" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -54,5 +70,4 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:text="Profile"/>
-
 </RelativeLayout>
