--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     tools:context=".MainActivity">
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/postRV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/Profile"/>
+
     <Button
         android:id="@+id/Settings"
         android:layout_width="53dp"
@@ -16,14 +23,6 @@
         android:foreground="@drawable/baseline_settings_24"
         android:layout_alignParentRight="true"
         tools:ignore="RtlHardcoded" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
 
     <Button
         android:id="@+id/Profile"
