--- a/app/src/main/res/layout/row_post_item.xml
+++ b/app/src/main/res/layout/row_post_item.xml
@@ -6,14 +6,16 @@
     android:layout_height="250dp">
 
     <ImageView
-        android:scaleType="centerCrop"
         android:id="@+id/row_post_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <ImageView
@@ -35,5 +37,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/votes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        android:text="0"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/VoteFor"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="4dp"
+        android:text="+1"
+        app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/row_post_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
