--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,12 @@
     <color name="search_opaque">#ffaa3f</color>
     <color name="selected_background">#ffaa3f</color>
     <color name="default_background">#3d3d3d</color>
+
+    <color name="settings">#FFFAC9</color>
+    <color name="settings1">#EED4F4</color>
+    <color name="settingsSecondary">#8EAEAA</color>
+    <color name="night_mode">#612481</color>
+    <color name="notifications">#13B2C3</color>
+    <color name="security">#D95F69</color>
+
 </resources>
