--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,6 +23,7 @@
             android:id="@+id/email"
             android:hint="@string/email"
             android:layout_width="match_parent"
+            android:inputType="text"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textfield.TextInputEditText
@@ -36,6 +37,7 @@
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
             android:hint="Username" />
 
     <ProgressBar
