--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,15 @@
         android:layout_alignParentRight="true"
         tools:ignore="RtlHardcoded" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timer"
+        android:text="Tekstas tralala"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        />
+
     <Button
         android:id="@+id/Profile"
         android:layout_width="wrap_content"
