--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -102,6 +102,7 @@
                         android:textStyle="bold" />
 
                     <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -146,10 +147,9 @@
             </LinearLayout>
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="118dp"
+                android:layout_height="64dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="20dp"
@@ -157,7 +157,7 @@
                 android:orientation="vertical"
                 android:padding="15dp">
 
-            <!-- Contact Us! -->
+                <!-- Contact Us!
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -190,8 +190,8 @@
                         android:background="@drawable/round_back_white10_20"
                         android:src="@drawable/baseline_keyboard_arrow_right_24" />
                 </RelativeLayout>
-
-            <!-- About Us -->
+-->
+                <!-- About Us -->
 
                 <RelativeLayout
                     android:layout_width="match_parent"
