--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
 
     <color name="light_primary">#EED4F4</color>
     <color name="light_secondary">#CBBDE4</color>
+    <color name="settingsSecondary">#EFBEF8</color>
+    <color name="settings1">#D168E4</color>
 
 
 
